[project]
name = "cds-pricer"
version = "1.0.0"
description = "Pedagogical CDS single-name pricer — Streamlit application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Credit Pricer" }]

dependencies = [
    "streamlit>=1.30",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "plotly>=5.18",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cds*"]
